# coursework

./: .gitignore  CMakeLists.txt  Makefile  PROTOCOL.md  README.md  USER_GUIDE.md
src/: client_lib.cpp  client_lib.hpp  client_main.cpp  conversion.cpp  conversion.hpp  protocol.cpp  protocol.hpp  server_app.cpp  server_app.hpp  server_main.cpp  user_store.cpp  user_store.hpp
tests/: acceptance_test.cpp  smoke_test.cpp
